Scroll the position into view when the content is not visible.

Previously, we implement scrollIntoView by scrolling the intersection of the
viewport and the content. However, when the content is not visible in the
viewport, e.g. outside boundary and the viewport's overflow attribute is
hidden, the intersection would be empty and the browser would stop the
scrolling logic. In this case, we presume the webpage wants to scroll the
position of the content but for some reason doesn't want to show it. In this
patch, we scroll the content's position for this special case.

BUG=673396
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2576963002
Cr-Commit-Position: refs/heads/master@{#441469}