third_party/WebKit/Source/core/paint/PaintLayerScrollableArea.cpp
@@ -86,6 +86,12 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 namespace blink {
 
+static LayoutRect localToAbsolute(LayoutBox& offset, LayoutRect rect) {
+  return LayoutRect(
+      offset.localToAbsoluteQuad(FloatQuad(FloatRect(rect)), UseTransforms)
+          .boundingBox());
+}
+
 PaintLayerScrollableAreaRareData::PaintLayerScrollableAreaRareData() {}
 
 const int ResizerControlExpandRatioForTouch = 2;
@@ -1623,25 +1629,17 @@ LayoutRect PaintLayerScrollableArea::scrollIntoView(
   ScrollOffset oldScrollOffset = getScrollOffset();
   ScrollOffset newScrollOffset(clampScrollOffset(roundedIntSize(
       toScrollOffset(FloatPoint(r.location()) + oldScrollOffset))));
-
-  if (newScrollOffset == oldScrollOffset) {
-    return LayoutRect(
-        box()
-            .localToAbsoluteQuad(FloatQuad(FloatRect(intersection(
-                                     layerBounds, localExposeRect))),
-                                 UseTransforms)
-            .boundingBox());
-  }
-
   setScrollOffset(newScrollOffset, scrollType, ScrollBehaviorInstant);
   ScrollOffset scrollOffsetDifference = getScrollOffset() - oldScrollOffset;
   localExposeRect.move(-LayoutSize(scrollOffsetDifference));
-  return LayoutRect(
-      box()
-          .localToAbsoluteQuad(
-              FloatQuad(FloatRect(intersection(layerBounds, localExposeRect))),
-              UseTransforms)
-          .boundingBox());
+
+  LayoutRect intersect =
+      localToAbsolute(box(), intersection(layerBounds, localExposeRect));
+  if (intersect.isEmpty() && !layerBounds.isEmpty() &&
+      !localExposeRect.isEmpty()) {
+    return localToAbsolute(box(), localExposeRect);
+  }
+  return intersect;
 }
 
 void PaintLayerScrollableArea::updateScrollableAreaSet(bool hasOverflow) {
